# conduit

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  conduit.callstack.json  conduit.postman_collection.json  docker-compose.yml
.github/workflows/: deploy-website.yml
.sqlx/: query-1d3bc1993c9472ae10e6a51feabdb80372d3ed73aa27af4f371cd2a35e417c52.json  query-1e4c9af1d95faec6f318fd447a7f4fa4e0d2a5624ac0cc7aa38774d38513486a.json  query-20c457e7488f37988be0976c7300172d7713b4b970f02c4f60ead54d713b164b.json  query-302a4a1267740aaebbd59d11eaef44e4e34bb38d4305a29ebe003a58b9a9ea3a.json  query-3f6457458cad8981e497d79b429444b30630320139f40f4ff5fa8ea3d6358110.json  query-4d35acc630017bcee52eba78425f76e3439a28ea824f808c702ff55432644731.json  query-60324cfbe1131a03edb1c4f3b504481c8ad455a4cf8d4e151d30c1e67e6e5f77.json  query-6a7d27bf30e9f10308e1c48ff64df3c6469c0addc7100996813b5296e35cd228.json  query-7eb241b20a63ab3a38eb0e3a0a04c5ff3cb401f76f1fee0d3ae3b81ea8799eaa.json  query-93eb7ba5c9ac98b9c0ecf9e718b758fe3b2aa8830fbb16d051aac352f098c6a5.json  query-9e56e5c5d9339c0f5224125994ae74822e434be987869952d2a2c00a4d957c0c.json  query-b1ff3ddb5abf85ed635a84f0a12b49ffb7eebb75c5ecd601e8842ead305bdad8.json  query-bfd25ac081c167e1988e6233789f68d90fdf3a28dfdb499179f4f21081634e08.json  query-c47e7535db599a3861d03fd23c6b7412ad0adca9a24cac66b3ee41d71d2f4fe2.json  query-dc03bc36cdfd3255cd30211ace36d5a2cd74d551693a8f6e9077caa33f14616f.json  query-dca801bd3784ba96fb4530ffe6faec91bcece95d53e461b4f2d990e27fa50bff.json  query-eef3e025a0815024619a4f978609dc6cab01d71b31697559b26d75c5ddf4cd58.json  query-ef1f545ce903ce7dcacc10bfc9e2830b37943e8c416098859e4bafcb47df6194.json  query-f8acc842fa3db6c248ae9870fb7028a7aaab6faa96c9a00f7441f32409fc58f9.json  query-fcc5402a731b94364965b68677830ae0d4c54a43b8d291a37e0ef413c43393b7.json
docs/: ARCHITECTURE.md  BPMN_VALIDATION.md  BPM_CONCEPTS.md  MIGRATION.md  PLAN.md
docs/adr/: ADR-001-async-runtime.md  ADR-002-web-framework.md  ADR-003-database-driver.md  ADR-004-xml-parser.md  ADR-005-expression-evaluator.md  ADR-006-migrations.md  ADR-007-connector-architecture.md  ADR-008-engine-stays-pure-bpmn.md  ADR-009-auth-architecture.md
docs/phases/: PHASE-0-evaluation.md  PHASE-1-foundation.md  PHASE-10-messages.md  PHASE-11-signals.md  PHASE-12-subprocess.md  PHASE-13-inclusive-gateway.md  PHASE-14-dmn.md  PHASE-15-clustering.md  PHASE-16-decision-table-ui.md  PHASE-17-external-task-long-polling.md  PHASE-18-element-documentation.md  PHASE-19-instance-notes.md  PHASE-2-schema.md  PHASE-20-deprecate-http-connector.md  PHASE-21-reference-workers.md  PHASE-22-access-control.md  PHASE-23-rbac.md  PHASE-3-parser.md  PHASE-4-token-engine.md  PHASE-5-rest-api.md  PHASE-5.5-ownership-labels.md  PHASE-8-timers.md  (+3 more)
examples/: http-worker.bpmn
graphify-out/: .graphify_ast.json  .graphify_cached.json  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_detect.json  .graphify_python  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
init/: 01-create-test-db.sh
migrations/: 001_initial.sql  002_core_schema.sql  002_orgs.sql  003_execution_history.sql  003_users.sql  004_jobs_cancelled_state.sql  004_process_groups.sql  005_parallel_join_state.sql  005_process_definitions.sql  006_decision_definitions.sql  006_process_instances.sql  007_executions.sql  008_variables.sql  009_tasks.sql  010_jobs.sql  011_event_subscriptions.sql  012_execution_history.sql  013_parallel_join_state.sql  014_decision_definitions.sql  015_timer_start_triggers.sql  016_process_events.sql  017_secrets.sql  018_jobs_http_config.sql  018_process_layouts.sql  019_api_keys.sql  019_event_subscriptions_error_type.sql  020_org_auth_config.sql  020_process_layouts.sql  021_decision_group_scoping.sql  021_roles.sql  022_org_members.sql  022_org_setup.sql  022_process_definition_disabled.sql  023_process_instance_counter.sql  023_role_assignments.sql  024_process_group_role_assignments.sql  024_roles_extended.sql  025_org_notification_config.sql  025_platform_admin.sql  026_org_contacts.sql  (+7 more)
samples/: 01-hello-echo.bpmn  02-echo-routing.bpmn  03-echo-parallel.bpmn  04-echo-error-boundary.bpmn
src/: config.rs  error.rs  error_codes.toml  leader.rs  lib.rs  main.rs  state.rs
tests/: api_test.rs  auth_test.rs  bootstrap_test.rs  decision_test.rs  deployment_test.rs  dmn_test.rs  echo_sample_test.rs  engine_test.rs  events_test.rs  exclusive_gateway_test.rs  external_task_test.rs  health_test.rs  http_task_test.rs  inclusive_gateway_test.rs  membership_test.rs  messages_test.rs  parallel_test.rs  parser_test.rs  password_reset_test.rs  rbac_global_test.rs  rbac_pg_scoped_test.rs  rbac_revoke_test.rs  rbac_scoped_test.rs  rbac_test.rs  schema_test.rs  script_task_test.rs  secrets_test.rs  signals_test.rs  subprocess_test.rs  timer_test.rs
ui/: index.html  package-lock.json  package.json
website/: astro.config.mjs  package-lock.json  package.json
workers/: PROTOCOL.md  README.md
workers/crates/conduit-worker/: Cargo.toml
workers/crates/conduit-worker/src/: handler.rs  types.rs
workers/crates/gcs-worker/: Cargo.toml
workers/crates/gcs-worker/src/: main.rs
workers/python/: README.md  pyproject.toml
workers/python/conduit_worker/: __init__.py  client.py  result.py  runner.py  types.py
workers/python/tests/: test_client.py
workers/rust/: Cargo.toml  README.md
workers/rust/crates/conduit-worker/: Cargo.toml
workers/rust/crates/conduit-worker-macros/: Cargo.toml
workers/rust/crates/conduit-worker-macros/src/: lib.rs
workers/rust/crates/conduit-worker/src/: client.rs  lib.rs  runner.rs
workers/rust/crates/conduit-worker/tests/: handler_macro.rs
workers/rust/crates/csv-worker/: Cargo.toml
workers/rust/crates/csv-worker/src/: main.rs
workers/rust/crates/http-worker/: Cargo.toml
workers/rust/crates/http-worker/src/: config.rs  handler.rs  render.rs
workers/rust/crates/http-worker/tests/: handler_test.rs
workers/rust/crates/kafka-produce-worker/: Cargo.toml
workers/rust/crates/kafka-produce-worker/src/: main.rs
(+296 files in other folders)
