[package]
name = "conduit"
version = "0.1.0"
edition = "2021"
description = "A lightweight, high-performance process orchestration engine in Rust"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8.9", features = ["json", "tracing"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "cors", "request-id"] }

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate"
]}

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
dotenvy = "0.15"

# Error handling
thiserror = "2.0.18"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Graceful shutdown — CancellationToken for background executors
tokio-util = { version = "0.7", features = ["rt"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# XML parsing (Phase 3)
roxmltree = "0.19"

# Expression evaluator (Phase 6) — FEEL via dsntk (DMN 1.5).
# Used by sequence-flow conditions on Exclusive / Inclusive gateways and
# slated to subsume the mini-FEEL DMN cell evaluator in src/dmn/feel.rs.
dsntk-feel = "0.3"
dsntk-feel-parser = "0.3"
dsntk-feel-evaluator = "0.3"

# HTTP client (for HTTP service task call-out)
reqwest = { version = "0.13.2", features = ["json"] }

# JSON Schema validation (Phase 15)
jsonschema = "0.26"

# Secret encryption-at-rest (Phase 16: HTTP connector)
chacha20poly1305 = "0.10"
base64 = "0.22"
rand = "0.8"

# Declarative JSON-to-JSON transforms for HTTP connector (Phase 16).
# Pure-Rust jq, no native deps. Used for both request and response shaping.
jaq-interpret = "1.5"
jaq-parse = "1.0"
jaq-core = "1.5"
jaq-std = "1.5"

# URL path-segment encoding for `:placeholder` substitutions.
urlencoding = "2"

# TOML parsing for error_codes.toml (embedded at compile time via include_str!).
toml = "0.8"

# Auth (Phase 22). JWT for interactive users; argon2 for password and API-key
# hashing (the prefix lookup hits a unique index, then argon2 verifies the
# full secret in constant time, so no separate constant-time compare needed).
jsonwebtoken = "9"
argon2 = "0.5"

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
serde_json = "1"
# Mock HTTP server for the HTTP service-task integration tests (Phase 16).
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
