[workspace]
resolver = "2"
members = [
    "crates/conduit-worker",
    "crates/http-worker",
    "crates/csv-worker",
    "crates/gcs-worker",
    "crates/kafka-produce-worker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/kinarix/conduit"
rust-version = "1.78"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

# Test-only
mockito = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
