[package]
name = "kafka-produce-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Reference Kafka producer worker for Conduit (kafka.produce topic) — scaffolded, not yet implemented"
publish = false

[[bin]]
name = "kafka-produce-worker"
path = "src/main.rs"

[dependencies]
conduit-worker = { path = "../conduit-worker" }
tokio.workspace = true
tracing.workspace = true
